--- a/templates/doctor/thermal_parameters.html
+++ b/templates/doctor/thermal_parameters.html
@@ -74,7 +74,6 @@
         <div id="sidebar" class="active">
             <div class="sidebar-header">Breast Cancer</div>
             <ul class="sidebar-menu">
-                <li><a href="{% url 'home' %}"><i class="icon-home"></i> Home</a></li>
                 <li><a href="{% url 'upload-image' %}"><i class="icon-user"></i> Upload Image</a></li>
                 <li><a href="{% url 'annotate_image' %}"><i class="icon-info"></i> Annotate Image</a></li>
                 <li><a href="{% url 'thermal_image' %}"><i class="icon-info"></i> Thermal Image</a></li>
@@ -180,7 +179,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Dashboard - Analytics | myTherma</title>
 
     <meta name="description" content="" />
 
@@ -345,7 +344,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
           <div class="app-brand demo">
-            <a href="index.html" class="app-brand-link">
+            <a href="{% url 'index' %}" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <svg
                   width="25"
@@ -401,7 +400,7 @@
                   </g>
                 </svg>
               </span>
-              <span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
+              <span class="app-brand-text demo menu-text fw-bolder ms-2", style="text-transform: none;">myTherma</span>
             </a>
 
             <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -500,34 +499,10 @@
                             </div>
                           </div>
                           <div class="flex-grow-1">
-                            <span class="fw-semibold d-block">John Doe</span>
-                            <small class="text-muted">Admin</small>
+                            <span class="fw-semibold d-block">{{ user.username }}</span>
+                            <small class="text-muted">{{ user.geeks_field }}</small>
                           </div>
                         </div>
-                      </a>
-                    </li>
-                    <li>
-                      <div class="dropdown-divider"></div>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <i class="bx bx-cog me-2"></i>
-                        <span class="align-middle">Settings</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
                       </a>
                     </li>
                     <li>
@@ -644,8 +619,8 @@
                 <p>Min Hotspot Temperature: {{ thermal_data.0.parameters.MinHotspotTemperature }}°C</p>
                 <p>Mean ROI Temperature: {{ thermal_data.0.parameters.MeanROITemperature }}°C</p>
                 <p>Percentage of ROI: {{ thermal_data.0.parameters.PercentageofROI }}%</p>
-                <p>Aerolar Temperature Difference: {{ thermal_data.0.parameters.temperaturedifference }}°C</p>
-                <p>Aerolar Symmetry: {{ thermal_data.0.parameters.AerolarSymmetry }}%</p>
+                <p>Areolar Temperature Difference: {{ thermal_data.0.parameters.temperaturedifference }}°C</p>
+                <p>Areolar Symmetry: {{ thermal_data.0.parameters.AerolarSymmetry }}%</p>
               </div>
               <div id = "parameter2" class="parameters">
                 <p>Number of Hotspots: {{ thermal_data.1.parameters.NumberofHotspots }}</p>
@@ -657,8 +632,8 @@
                 <p>Min Hotspot Temperature: {{ thermal_data.1.parameters.MinHotspotTemperature }}°C</p>
                 <p>Mean ROI Temperature: {{ thermal_data.1.parameters.MeanROITemperature }}°C</p>
                 <p>Percentage of ROI: {{ thermal_data.1.parameters.PercentageofROI }}%</p>
-                <p>Aerolar Temperature Difference: {{ thermal_data.1.parameters.temperaturedifference }}°C</p>
-                <p>Aerolar Symmetry: {{ thermal_data.1.parameters.AerolarSymmetry }}%</p>
+                <p>Areolar Temperature Difference: {{ thermal_data.1.parameters.temperaturedifference }}°C</p>
+                <p>Areolar Symmetry: {{ thermal_data.1.parameters.AerolarSymmetry }}%</p>
               </div>
               <div id = "parameter3" class="parameters">
                 <p>Number of Hotspots: {{ thermal_data.2.parameters.NumberofHotspots }}</p>
@@ -670,8 +645,8 @@
                 <p>Min Hotspot Temperature: {{ thermal_data.2.parameters.MinHotspotTemperature }}°C</p>
                 <p>Mean ROI Temperature: {{ thermal_data.2.parameters.MeanROITemperature }}°C</p>
                 <p>Percentage of ROI: {{ thermal_data.2.parameters.PercentageofROI }}%</p>
-                <p>Aerolar Temperature Difference: {{ thermal_data.2.parameters.temperaturedifference }}°C</p>
-                <p>Aerolar Symmetry: {{ thermal_data.2.parameters.AerolarSymmetry }}%</p>
+                <p>Areolar Temperature Difference: {{ thermal_data.2.parameters.temperaturedifference }}°C</p>
+                <p>Areolar Symmetry: {{ thermal_data.2.parameters.AerolarSymmetry }}%</p>
               </div>
               <div id = "parameter4" class="parameters">
                 <p>Number of Hotspots: {{ thermal_data.3.parameters.NumberofHotspots }}</p>
@@ -683,8 +658,8 @@
                 <p>Min Hotspot Temperature: {{ thermal_data.3.parameters.MinHotspotTemperature }}°C</p>
                 <p>Mean ROI Temperature: {{ thermal_data.3.parameters.MeanROITemperature }}°C</p>
                 <p>Percentage of ROI: {{ thermal_data.3.parameters.PercentageofROI }}%</p>
-                <p>Aerolar Temperature Difference: {{ thermal_data.3.parameters.temperaturedifference }}°C</p>
-                <p>Aerolar Symmetry: {{ thermal_data.3.parameters.AerolarSymmetry }}%</p>
+                <p>Areolar Temperature Difference: {{ thermal_data.3.parameters.temperaturedifference }}°C</p>
+                <p>Areolar Symmetry: {{ thermal_data.3.parameters.AerolarSymmetry }}%</p>
               </div>
               <div id = "parameter5" class="parameters">
                 <p>Number of Hotspots: <strong>{{ thermal_data.4.parameters.NumberofHotspots }}</strong></p>
@@ -696,8 +671,8 @@
                 <p>Min Hotspot Temperature: {{ thermal_data.4.parameters.MinHotspotTemperature }}°C</p>
                 <p>Mean ROI Temperature: {{thermal_data.4.parameters.MeanROITemperature }}°C</p>
                 <p>Percentage of ROI: {{ thermal_data.4.parameters.PercentageofROI }}%</p>
-                <p>Aerolar Temperature Difference: {{thermal_data.4.parameters.temperaturedifference }}°C</p>
-                <p>Aerolar Symmetry: {{ thermal_data.4.parameters.AerolarSymmetry }}%</p>
+                <p>Areolar Temperature Difference: {{thermal_data.4.parameters.temperaturedifference }}°C</p>
+                <p>Areolar Symmetry: {{ thermal_data.4.parameters.AerolarSymmetry }}%</p>
               </div>
             </div>
             <div class="main-image-container">
